# sumo-gym

./: .all-contributorsrc  .bashrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  cosmos-lower-loss.json  cosmos-lower-reward.json  cosmos-upper-loss.json  cosmos-upper-reward.json  jumbo-lower-loss.json  jumbo-lower-reward.json  jumbo-upper-loss.json  jumbo-upper-reward.json  loss.json  loss_lower.json  metrics-cosmos.json  metrics-jumbo.json  metrics.json  num-upper-reward.json  pyproject.toml  requirements.txt  reward.json  reward_lower.json  setup.cfg  setup.py
.github/workflows/: cd.yml  ci.yml
assets/: network.net.xml
assets/data/: README.md  demand.rou.xml  jumbo.net.xml  jumbo.rou.xml  jumbo.sumocfg  jumbo_charging_station_additional.xml  network.net.xml  (+10 more)
baselines/: cosmos_generate_plot.py  generate_plot.py  jumbo_generate_plot.py  rllib.py  sb3-copy.py  sb3-debug.py  sb3.py  sb3_cosmos.py  sb3_jumbo.py  sb3_jumbo_reward.py
data/: example.net.xml
jumbo/: lower-loss.json  lower-reward.json  metrics.json  upper-loss.json  upper-reward.json
num/: num-upper-loss.json
tests/: test_basic.py  test_env.py  test_fmp.py  test_sumo_utils.py  test_vrp.py
tutorial/: README.md  make-env-data.py  make-env-xml.py  make-env.py  make-fmpenv-data-simple.py  make-fmpenv-data.py  make-fmpenv-xml.py  make-vrpenv-data.py  make-vrpenv-xml.py
tutorials/: README.md  fmp-circle.py  fmp-cosmos.py  fmp-data.py  fmp-jumbo.py  fmp-manhattan.py  fmp-numerical.py  fmp-stanford.py  make-fmpenv-xml.py  rllib-test-fmp.py  rllib-test.py  sb3-test.py
(+85 files in other folders)
