[metadata]
name = sumo_gym
version = 0.1.0
author = Shuo Liu
author_email = ninomyemail@gmail.com
description = OpenAI-gym like toolkit for developing and comparing reinforcement learning algorithms on SUMO.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LovelyBuggies/sumo-gym
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src